# BroNative

./: .gitignore  CMakeLists.txt  README.md
docs/plans/: 2026-01-30-performance-optimization-design.md
src/: bro_app.cc  bro_app.h  bro_handler.cc  bro_handler.h  bro_handler_mac.mm  bro_mac.mm
src/mac/: Info.plist.in
